Bug fixes and updates to deep learning models
Defualt model for Atlantic humpback whale implemented
Koogu and zip model unit tests